--- a/XF.Atividade_2/XF.Atividade_2/XF.Atividade_2.csproj
+++ b/XF.Atividade_2/XF.Atividade_2/XF.Atividade_2.csproj
@@ -21,5 +21,8 @@
     <EmbeddedResource Update="View\AlunoView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\NovoAlunoView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
